# stat_tool

./: .gitignore  CMakeLists.txt  README.md  TODO  pyproject.toml
.github/workflows/: conda-package-build.yml
cmake/: Anaconda.cmake
conda/: environment.yml  meta.yaml
doc/: Doxyfile  api.rst  conf.py  extra.md  installation.md  usage.md
doc/_build/doctrees/: extra.doctree  (+3 more)
doc/api/: classes.rst  functions.rst  index.rst  python.rst
doc/examples/: clustering.ipynb  example1.ipynb  example2.ipynb
doc/html/: annotated.html  categorical__process_8cpp.html  chain_8cpp.html  chain__algorithms_8cpp.html  chain__reestimation_8h.html  chain__reestimation_8h_source.html  chain__reestimation_8hpp.html  chain__reestimation_8hpp_source.html  classes.html  classstat__tool_1_1CategoricalProcess-members.html  classstat__tool_1_1CategoricalProcess.html  classstat__tool_1_1Chain-members.html  classstat__tool_1_1Chain.html  classstat__tool_1_1ChainData-members.html  classstat__tool_1_1ChainData.html  classstat__tool_1_1ChainReestimation-members.html  classstat__tool_1_1ChainReestimation.html  classstat__tool_1_1Clusters-members.html  classstat__tool_1_1Clusters.html  classstat__tool_1_1Compound-members.html  classstat__tool_1_1Compound.html  classstat__tool_1_1CompoundData-members.html  classstat__tool_1_1CompoundData.html  classstat__tool_1_1ContinuousParametric-members.html  classstat__tool_1_1ContinuousParametric.html  classstat__tool_1_1ContinuousParametricProcess-members.html  classstat__tool_1_1ContinuousParametricProcess.html  classstat__tool_1_1Convolution-members.html  classstat__tool_1_1Convolution.html  classstat__tool_1_1ConvolutionData-members.html  classstat__tool_1_1ConvolutionData.html  classstat__tool_1_1Curves-members.html  classstat__tool_1_1Curves.html  classstat__tool_1_1Dendrogram-members.html  classstat__tool_1_1Dendrogram.html  classstat__tool_1_1DiscreteDistributionData-members.html  classstat__tool_1_1DiscreteDistributionData.html  classstat__tool_1_1DiscreteMixture-members.html  classstat__tool_1_1DiscreteMixture.html  classstat__tool_1_1DiscreteMixtureData-members.html  (+255 more)
doc/latex/: annotated.tex  categorical__process_8cpp.tex  chain_8cpp.tex  chain__algorithms_8cpp.tex  chain__reestimation_8h.tex  chain__reestimation_8h_source.tex  chain__reestimation_8hpp.tex  chain__reestimation_8hpp_source.tex  classstat__tool_1_1CategoricalProcess.tex  classstat__tool_1_1Chain.tex  classstat__tool_1_1ChainData.eps  classstat__tool_1_1ChainData.tex  classstat__tool_1_1ChainReestimation.tex  classstat__tool_1_1Clusters.eps  classstat__tool_1_1Clusters.tex  classstat__tool_1_1Compound.eps  classstat__tool_1_1Compound.tex  classstat__tool_1_1CompoundData.eps  classstat__tool_1_1CompoundData.tex  classstat__tool_1_1ContinuousParametric.tex  classstat__tool_1_1ContinuousParametricProcess.tex  classstat__tool_1_1Convolution.eps  classstat__tool_1_1Convolution.tex  classstat__tool_1_1ConvolutionData.eps  classstat__tool_1_1ConvolutionData.tex  classstat__tool_1_1Curves.tex  classstat__tool_1_1Dendrogram.eps  classstat__tool_1_1Dendrogram.tex  classstat__tool_1_1DiscreteDistributionData.eps  classstat__tool_1_1DiscreteDistributionData.tex  classstat__tool_1_1DiscreteMixture.eps  classstat__tool_1_1DiscreteMixture.tex  classstat__tool_1_1DiscreteMixtureData.eps  classstat__tool_1_1DiscreteMixtureData.tex  classstat__tool_1_1DiscreteParametric.eps  classstat__tool_1_1DiscreteParametric.tex  classstat__tool_1_1DiscreteParametricModel.eps  classstat__tool_1_1DiscreteParametricModel.tex  classstat__tool_1_1DiscreteParametricProcess.tex  classstat__tool_1_1DistanceMatrix.eps  (+110 more)
doc/user/: autosum.rst  index.rst  tutorial.rst
doc/xml/: Doxyfile.xml  categorical__process_8cpp.xml  chain_8cpp.xml  chain__algorithms_8cpp.xml  chain__reestimation_8h.xml  chain__reestimation_8hpp.xml  classstat__tool_1_1CategoricalProcess.xml  classstat__tool_1_1Chain.xml  classstat__tool_1_1ChainData.xml  classstat__tool_1_1ChainReestimation.xml  classstat__tool_1_1Clusters.xml  classstat__tool_1_1Compound.xml  classstat__tool_1_1CompoundData.xml  classstat__tool_1_1ContinuousParametric.xml  classstat__tool_1_1ContinuousParametricProcess.xml  classstat__tool_1_1Convolution.xml  classstat__tool_1_1ConvolutionData.xml  classstat__tool_1_1Curves.xml  classstat__tool_1_1Dendrogram.xml  classstat__tool_1_1DiscreteDistributionData.xml  classstat__tool_1_1DiscreteMixture.xml  classstat__tool_1_1DiscreteMixtureData.xml  classstat__tool_1_1DiscreteParametric.xml  classstat__tool_1_1DiscreteParametricModel.xml  classstat__tool_1_1DiscreteParametricProcess.xml  classstat__tool_1_1DistanceMatrix.xml  classstat__tool_1_1Distribution.xml  classstat__tool_1_1Forward.xml  classstat__tool_1_1FrequencyDistribution.xml  classstat__tool_1_1Histogram.xml  classstat__tool_1_1MultiPlot.xml  classstat__tool_1_1MultivariateMixture.xml  classstat__tool_1_1MultivariateMixtureData.xml  classstat__tool_1_1Reestimation.xml  classstat__tool_1_1Regression.xml  classstat__tool_1_1RegressionKernel.xml  classstat__tool_1_1SinglePlot.xml  classstat__tool_1_1StatError.xml  classstat__tool_1_1StatInterface.xml  classstat__tool_1_1TemplateMultiPlotSet.xml  (+64 more)
src/cpp/stat_tool/: CMakeLists.txt  chain.cpp  continuous_parametric.cpp  discrete_parametric_process.cpp  distribution.cpp  markovian.h  multivariate_mixture.h  reestimation.cpp  reestimation.h  reestimation.hpp  stat_tools.h  vectors.cpp
src/wrapper/: CMakeLists.txt  export_base.cpp  export_distance_matrix.cpp  export_distribution.cpp
stat_tool/: setup-egg.py
test/: README.md  test_cluster.py  test_cluster_and_distance_matrix.py  test_compound.py  test_compound_functional.py  test_convolution.py  test_distance_matrix.py  test_distribution.py  test_estimate.py  test_histogram.py  test_matrix.py  test_mixture.py  test_mixture_functional.py  test_multivariate_mixture.py  test_multivariate_mixture_functional.py  test_output.py  test_plot.py  test_regression.py  test_regression_functional.py  test_vector_distance.py  test_vectors.py  tools.py
test/cpp/: CMakeLists.txt  test_matrix.cpp
(+232 files in other folders)
